<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/game_container"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/label_container"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/end_container"
            android:layout_width="281dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/victory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/you_win"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="@color/player1Color"
                android:textSize="56sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                android:visibility="gone" />

            <TextView
                android:id="@+id/failure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/you_lose"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="56sp"
                android:textStyle="bold|italic"
                android:typeface="sans"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mines_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textSize="56sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"></GridLayout>

    <LinearLayout
        android:id="@+id/game_control_container"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/new_game_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/back_setup_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back_setup_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/to_mark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/to_mark"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>